--- a/server/client/single-purpose-app/package.json
+++ b/server/client/single-purpose-app/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/button": "^3.2.0",
+    "@material/checkbox": "^3.2.0",
+    "@material/data-table": "^3.2.0",
+    "@material/fab": "^3.2.0",
+    "@material/floating-label": "^3.2.0",
+    "@material/list": "^3.2.0",
+    "@material/menu": "^3.2.0",
+    "@material/radio": "^3.2.0",
+    "@material/select": "^3.2.0",
+    "@material/textfield": "^3.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.11.0",
