--- a/server/client/single-purpose-app/package.json
+++ b/server/client/single-purpose-app/package.json
@@ -3,22 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material/button": "^3.2.0",
-    "@material/checkbox": "^3.2.0",
-    "@material/data-table": "^3.2.0",
-    "@material/fab": "^3.2.0",
-    "@material/floating-label": "^3.2.0",
-    "@material/list": "^3.2.0",
-    "@material/menu": "^3.2.0",
-    "@material/radio": "^3.2.0",
-    "@material/select": "^3.2.0",
-    "@material/textfield": "^3.2.0",
+    "@material/react-fab": "^0.15.0",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
     "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
