--- a/server/client/single-purpose-app/package.json
+++ b/server/client/single-purpose-app/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@material/react-button": "^0.15.0",
+    "@material/react-dialog": "^0.15.0",
     "@material/react-fab": "^0.15.0",
     "@material/react-text-field": "^0.15.0",
     "@types/classnames": "^2.2.9",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "axios": "^0.19.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
