--- a/server/client/single-purpose-app/package.json
+++ b/server/client/single-purpose-app/package.json
@@ -12,12 +12,17 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "axios": "^0.19.0",
+    "base-64": "^0.1.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-promise": "^0.6.0",
     "typescript": "^3.6.4"
   },
   "scripts": {
